2020-06-16  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/x11] Miscellaneous clean-ups.

	* graph/x11/grx11.c (gr_x11_surface_refresh_rect): Generate Expose
	instead of `XPutImage'.
	(gr_x11_blitter_reset): Signedness.
	(gr_x11_surface_listen_event): Logging.

2020-06-12  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Simplify X11 driver.

	* graph/x11/grx11.c (grX11Surface): Remove redundant fields.
	(gr_x11_blitter_reset, gr_x11_surface_{resize,init}): Work directly
	with `XImage'.
	(gr_x11_surface_listen_event): Make sure resize succeeds.

2020-06-11  David Turner  <david@freetype.org>

	*/*: Include internal headers by their real names.

	The FT_INTERNAL_XXX_H macros are going to disappear.

2020-06-09  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c (gr_x11_surface_listen_event): No need to flush.

2020-06-07  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftmulti.c (Process_Event) Handle resizing.
	* src/ftdiff.c (main): Ditto.

2020-06-04  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Fix color management bugs including `ftmulti'.

	* graph/gblblit.c (grSetTargetPenBrush): New function to manage color
	and other parameters required for direct rendering.
	(grBlitGlyphToSurface): Use it here to decode color only.
	* src/ftcommon.h (FTDemo_Sketch_Glyph_Color): Use it here in full.
	* graph/graph.h: Update docs.

2020-06-01  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid,ftstring,ftview] Avoid uninitialized `event.type'.

	* src/ftgrid.c, src/ftstring.c, src/ftview.c (Process_Event): Updated.

2020-06-01  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgamma.c (event_gamma_grid): Fix oscure resizing crash.

2020-05-31  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftstring.c (Process_Event): Process resizing.

2020-05-31  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c (gr_x11_surface_init): Remove some settings.

2020-05-31  Alexei Podtelezhnikov  <apodtele@gmail.com>
