@@ -1,3 +1,11 @@
+2020-06-17  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	[graph/x11] Ignore redundant Expose from resizing.
+
+	* graph/x11/grx11.c (gr_x11_surface_init): Enable VisibilityNotify.
+	(gr_x11_surface_listen_event): Track recent Expose events and ignore
+	redundant ones.
+
 2020-06-16  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	[graph/x11] Miscellaneous clean-ups.
